# PIC

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.railway  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  TECHNICAL_DEBT.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.json
.claude/: settings.json
.claude/agents/: code-review-expert.md  duplication-detector.md  migration-reviewer.md  oracle.md  performance-reviewer.md  security-reviewer.md
.claude/hooks/: block-commands.sh  block-schema-changes.sh  check-todo-refs.sh  run-related-tests.sh
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  improvement.md
.github/workflows/: ci-cd.yml  codeql.yml  debt-register-audit.yml  deploy-staging.yml
docs/: TODO.md  claude-code-quality-enforcement.md  gdrive-setup-guide.md  notes.docx
docs/audit/: 2026-02-11-project-audit.md  debt_milestone_label_mapping.md  debt_register_148.csv
docs/automation/: README.md  agent-rules-source-of-truth.md  plugin-policy.md
docs/deployment/: architecture.md  modal-setup.md  self-hosted.md
docs/n8n-workflows/: batch-google-drive-upload.json
docs/operations/: database-backup-restore.md  deployment-rollback.md  log-aggregation.md  monitoring-setup.md  staging-environment.md
docs/plans/: 2026-02-10-migrate-aws-to-railway-modal.md  2026-02-17-medium-priority-debt.md  2026-02-24-open-source-transition-design.md  2026-02-24-open-source-transition.md  2026-03-04-storage-backends-and-url-ingestion-design.md  gdrive-sync-design.md
docs/runbooks/: railway-resources.md  secrets-rotation.md
scripts/: analyze_embedding_distances.py  analyze_hdbscan_l1.py  analyze_l1_distances.py  debt_sync.py  recluster_now.py  rollback_check.py  seed.py  smoke_test.py  visualize.py  visualize_clusters.py
src/nic/: modal_app.py
src/pic/: __init__.py  config.py  main.py  modal_app.py
tests/: conftest.py
tests/e2e/: conftest.py  test_health_e2e.py
tests/integration/: conftest.py  test_api_integration.py  test_clustering_integration.py  test_db_operations.py  test_images_url_ingest.py  test_migrations.py
tests/unit/: test_api_endpoints.py  test_auth.py  test_cluster_visualization.py  test_cluster_worker.py  test_clustering.py  test_clustering_pipeline.py  test_config.py  test_core.py  test_database.py  test_embedding.py  test_entrypoint.py  test_gdrive_api.py  test_gdrive_service.py  test_gdrive_sync_worker.py  test_helpers.py  test_hnsw_migrations.py  test_image_processing.py  test_image_store.py  test_image_validation.py  test_ingest_worker.py  test_metrics.py  test_middleware.py  test_modal_app.py  test_modal_dispatch.py  test_pipeline.py  test_rate_limit.py  test_storage_base.py  test_storage_factory.py  test_storage_gcs.py  test_storage_local.py  test_storage_s3.py  test_types.py  test_url_ingest.py  test_vector_store.py
(+97 files in other folders)
